# web-rs

./: .gitignore  Cargo.toml  package-lock.json  package.json  tsconfig.json  webpack.config.js
server/: Cargo.toml
server/src/: main.rs  web.rs
ui/: index.ts
