[package]
name = "web-rs"
version = "0.1.0"
authors = ["Christopher Michael Sutton <christopher.sutton12@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
env_logger = "0.7.1"
ws = "0.9.1"
log = "0.4.8"
notify = "5.0.0-pre.2"
lazy_static = "1.4"
